pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mon-pod
spec:
  containers:
    - name: api-python
      image: guenolee/tp1-api-python:latest
      ports:
        - containerPort: 8080
