service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-python-service
spec:
  selector:
    app: api-python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
